tests/smt2/error/minimized8.smt2
(declare-sort U)
(declare-fun e () U)
(pop)
(x28)
